# day1-enterprise-rag

./: .env.example  .gitignore  docker-compose.yml  main.py  pyproject.toml
app/: config.py  ingestion.py  query.py  stores.py
scripts/: 01_hello_rag.py  ask.py  ingest.py
