[project]
name = "day1-enterprise-rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.139.0",
    "llama-index-core>=0.14.23",
    "llama-index-embeddings-huggingface>=0.7.0",
    "llama-index-llms-anthropic>=0.11.8",
    "llama-index-readers-file>=0.6.0",
    "llama-index-vector-stores-postgres>=0.8.1",
    "llama-index-vector-stores-qdrant>=0.10.2",
    "psycopg[binary]>=3.3.4",
    "pydantic-settings>=2.14.2",
    "qdrant-client>=1.18.0",
    "ragas>=0.4.3",
    "sentence-transformers>=5.6.0",
    "slowapi>=0.1.10",
    "structlog>=26.1.0",
    "uvicorn[standard]>=0.51.0",
]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "ruff>=0.15.20",
]
